--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -165,8 +165,8 @@ hr.small {
     display: table;
     position: relative;
     width: 100%;
-    height: 50%;
-    background: url('../img/dartmouth_background.jpg') no-repeat center center;
+    height: 100%;
+    background: url(https://www.dartmouth.edu/~gallery/downloads/images/sunset-1280x1024.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -307,7 +307,7 @@ hr.small {
 /* Map */
 
 .map {
-    height: 600px;
+    height: 500px;
 }
 
 .map iframe{
