--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -166,7 +166,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(https://upload.wikimedia.org/wikipedia/commons/c/c4/Princeton_University_t    iger_crest2.jpg) no-repeat center center scroll;
+    background: url(https://upload.wikimedia.org/wikipedia/commons/c/c4/Princeton_University_tiger_crest2.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
